[package]
name = "rust_db"
version = "0.1.0"
authors = ["farooq-azam-khan <farooq1.khan@ryerson.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rusqlite = "0.26.0"

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]